--- a/.github/workflows/Build TTYD OpenWrt.yml
+++ b/.github/workflows/Build TTYD OpenWrt.yml
@@ -153,7 +153,7 @@ jobs:
             "package/feeds/packages/ttyd" \
             "package/feeds/packages/libwebsockets" \
             "package/feeds/luci/luci-app-ttyd" \
-            "package/feeds/luci/luci-app-diskman" \; do
+            "package/feeds/luci/luci-app-diskman" ; do
             if [ -d "$dir" ]; then
               echo "删除 feeds 目录: $dir"
               rm -rf "$dir"
